--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,4 @@
 .vscode/
 .vscode/*
 
-riptide_description/urdf/riptide.urdf
-riptide_description/urdf/riptide.sdf
+scripts/setup_scripts/ros_install*
