--- a/scripts/vscode/tasks.json
+++ b/scripts/vscode/tasks.json
@@ -47,6 +47,12 @@
             "problemMatcher": []
         },
         {
+            "label": "xfer_xavier",
+            "type": "shell",
+            "command": "../../riptide_setup/scripts/ros_scripts/xfer.sh xavier",
+            "problemMatcher": []
+        },
+        {
             "label": "shutdown_all",
             "type": "shell",
             "command": "../../riptide_setup/scripts/shutdown_scripts/shutdown_all.sh",
