xfer part works!

--- a/colcon_riptide/setup.cfg
+++ b/colcon_riptide/setup.cfg
@@ -1,14 +1,13 @@
 [metadata]
-name = colcon-clean
-version = attr: colcon_clean.__version__
+name = colcon-riptide
+version = attr: colcon_riptide.__version__
 url = https://colcon.readthedocs.io
 project_urls =
-    Changelog = https://github.com/colcon/colcon-clean/milestones?direction=desc&sort=due_date&state=closed
-    GitHub = https://github.com/colcon/colcon-clean/
-author = Ruffin White
-author_email = roxfoxpox@gmail.com
-maintainer = Ruffin White
-maintainer_email = roxfoxpox@gmail.com
+    GitHub = https://github.com/osu-uwrt/riptide_setup
+author = Cole Tucker
+author_email = tucker.737@osu.edu
+maintainer = Cole Tucker
+maintainer_email = tucker.737@osu.edu
 classifiers =
     Development Status :: 3 - Alpha
     Environment :: Plugins
@@ -20,7 +19,7 @@ classifiers =
     Programming Language :: Python
     Topic :: Software Development :: Build Tools
 license = Apache License, Version 2.0
-description = Extension for colcon to clean package workspaces.
+description = Extension for colcon to interact with the riptide software stack.
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = colcon
@@ -66,29 +65,29 @@ filterwarnings =
     ignore::DeprecationWarning:scantree.*:
     ignore:lib2to3 package is deprecated::scspell
     ignore::pytest.PytestUnraisableExceptionWarning
-junit_suite_name = colcon-clean
+junit_suite_name = colcon-riptide
 
 [options.entry_points]
-colcon_clean.base_handler =
-    build = colcon_clean.base_handler.build:BuildBaseHandler
-    install = colcon_clean.base_handler.install:InstallBaseHandler
-    log = colcon_clean.base_handler.log:LogBaseHandler
-    test_result = colcon_clean.base_handler.test_result:TestResultBaseHandler
-colcon_clean.subverb =
-    workspace = colcon_clean.subverb.workspace:WorkspaceCleanSubverb
-    packages = colcon_clean.subverb.packages:PackagesCleanSubverb
-colcon_core.extension_point =
-    colcon_clean.base_handler = colcon_clean.base_handler:BaseHandlerExtensionPoint
-    colcon_clean.subverb = colcon_clean.subverb:CleanSubverbExtensionPoint
+# colcon_clean.base_handler =
+#     build = colcon_clean.base_handler.build:BuildBaseHandler
+#     install = colcon_clean.base_handler.install:InstallBaseHandler
+#     log = colcon_clean.base_handler.log:LogBaseHandler
+#     test_result = colcon_clean.base_handler.test_result:TestResultBaseHandler
+# colcon_clean.subverb =
+#     workspace = colcon_clean.subverb.workspace:WorkspaceCleanSubverb
+#     packages = colcon_clean.subverb.packages:PackagesCleanSubverb
+# colcon_core.extension_point =
+#     colcon_clean.base_handler = colcon_clean.base_handler:BaseHandlerExtensionPoint
+#     colcon_clean.subverb = colcon_clean.subverb:CleanSubverbExtensionPoint
 colcon_core.verb =
-    clean = colcon_clean.verb.clean:CleanVerb
+    deploy = colcon_riptide.verb.deploy:DeployVerb
 
 [flake8]
 import-order-style = google
 
 [coverage:run]
 branch = True
-source = colcon_clean
+source = colcon_riptide
 
 [coverage:report]
 exclude_lines =
