add the timesync verb for real

--- a/colcon_riptide/setup.cfg
+++ b/colcon_riptide/setup.cfg
@@ -71,6 +71,7 @@ junit_suite_name = colcon-riptide
 [options.entry_points]
 colcon_core.verb =
     deploy = colcon_riptide.verb.deploy:DeployVerb
+    timesync = colcon_riptide.verb.timesync:TimesyncVerb
 
 [flake8]
 import-order-style = google
