Colcon now supports deploy ignore :)

--- a/colcon_riptide/setup.cfg
+++ b/colcon_riptide/setup.cfg
@@ -72,6 +72,9 @@ junit_suite_name = colcon-riptide
 colcon_core.verb =
     deploy = colcon_riptide.verb.deploy:DeployVerb
     timesync = colcon_riptide.verb.timesync:TimesyncVerb
+colcon_core.package_identification =
+    deploy_ignore = colcon_riptide.package_identification.deploy_ignore:IgnoreDeployPackageIdentification
+
 
 [flake8]
 import-order-style = google
