--- a/colcon_riptide/setup.cfg
+++ b/colcon_riptide/setup.cfg
@@ -72,9 +72,8 @@ junit_suite_name = colcon-riptide
 colcon_core.verb =
     deploy = colcon_riptide.verb.deploy:DeployVerb
     timesync = colcon_riptide.verb.timesync:TimesyncVerb
-colcon_core.package_identification =
-    deploy_ignore = colcon_riptide.package_identification.deploy_ignore:IgnoreDeployPackageIdentification
-
+colcon_core.package_augmentation =
+    deploy_augmentation = colcon_riptide.package_augmentation.deploy_augmentation:DeployIgnorePackageAugmentation
 
 [flake8]
 import-order-style = google
